Create computerPlay, get input
Creates the computerPlay function, random number between 0 and 2 to generate RPS. Gets input from player, sets all to lowercase, capitalizes first letter.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <script>
+        function computerPlay(){
+            a = Math.random()*3;
+            a = Math.floor(a);
+            let computerResult;
+            if (a === 0){
+                computerResult = "Rock";
+            }
+            else if (a === 1){
+                computerResult = "Paper";
+            }
+            else if (a === 2){
+                computerResult = "Scissors";
+            }
+            else{
+                computerResult = "Error";
+            }
+            return(computerResult);
+        }
+
+        console.log(computerPlay());
+
+        let playerInput = prompt("Rock, Paper or Scissors?");
+        playerInput = playerInput.toLowerCase();
+        playerInput = playerInput.toUpperCase(playerInput.charAt(0));
+
+        function playGame(playerSelection, computerSelection){
+            
+        }
+
+        console.log(playGame(playerInput, computerPlay()))
+    </script>
 </body>
 </html>
