--- a/index.html
+++ b/index.html
@@ -49,15 +49,10 @@
                 else if (computerSelection === s){
                     return("Rock beats Scissors, you win!");
                 }
-                else{
-                    return("Error, " + playerSelection + " is not a valid input.");
-                }
             }
         }
 
-        let test;
-        test = playGame(playerInput, computerPlay());
-        console.log(test);
+        console.log(playGame(playerInput, computerPlay()));
 
     </script>
 </body>
