Complete player vs computer comparisons
Completes the if/else testing for player input vs computer. Establishes error checking on player input. Removes testing logs.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             return(computerResult);
         }
 
-        console.log(computerPlay());
+
 
         let playerInput = prompt("Rock, Paper or Scissors?");
         playerInput = playerInput.toLowerCase();
         playerInput = playerInput.charAt(0).toUpperCase() + playerInput.slice(1);
-        console.log(playerInput);
+
 
         function playGame(playerSelection, computerSelection){
             const r = "Rock";
@@ -46,9 +46,34 @@
                 else if (computerSelection === p){
                     return("Paper beats Rock, you lose!");
                 }
-                else if (computerSelection === s){
+                else{
                     return("Rock beats Scissors, you win!");
                 }
+            }
+            else if (playerSelection === p){
+                if (computerSelection === r){
+                    return("Paper beats Rock, you win!");
+                }
+                else if (computerSelection === p){
+                    return("Tie!");
+                }
+                else{
+                    return("Scissors beats Paper, you lose!");
+                }
+            }
+            else if (playerSelection === s){
+                if (computerSelection === r){
+                    return("Rock beats Scissors, you lose!");
+                }
+                else if (computerSelection === p){
+                    return("Scissors beats Paper, you win!");
+                }
+                else {
+                    return("Tie!");
+                }
+            }
+            else{
+                return("Error! " + playerSelection + " is not a valid input!");
             }
         }
 
