--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="main">
+        <div class="playSelection">
+            play
+        </div>
+        <div class="playResult">
+            result
+        </div>
+        <div class="scoreArea">
+            score
+        </div>
 
+    </div>
 <script src="script.js"></script>
 </body>
 </html>
